# name-service-smart-contract

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: schema.rs
schema/: execute_msg.json  migrate_msg.json  query_msg.json
src/: contract.rs  contract_info.rs  error.rs  lib.rs  msg.rs  state.rs  version_info.rs
src/execute/: register_name.rs
src/instantiate/: instantiate_contract.rs
src/migrate/: migrate_contract.rs
src/query/: query_address_by_name.rs  query_names_by_address.rs  query_state.rs  query_version.rs  search_for_names.rs
