[package]
name = "name-smart-contract"
version = "0.1.0"
authors = ["Pierce Trey <ptrey@figure.com>", "Jake Schwartz <jschwartz@figure.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
provwasm-std = { version = "0.16.0"}
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = { version = "0.3.1" }
thiserror = { version = "1.0.26" }
regex = "1.5.4"

[dev-dependencies]
provwasm-mocks = { version = "0.16.0" }
cosmwasm-schema = { version = "0.16.2" }
